Resolves: tdf#100732 hang closing Print Preview with X-icon on menubar

triggered by change...

commit f9bb13419549d621ffd55d9d81e0732a89560e2e
Author: Juergen Funk <juergen.funk_ml@cib.de>
Date:   Fri May 13 10:42:17 2016 +0200

    tdf#99815 use XNotifyingDispatch in sfx2

which allowed the problem introduced by...

commit d0c3c24da2506bff1719a276f2eff34589fa7663
Author: Kohei Yoshida <kohei.yoshida@gmail.com>
Date:   Wed Jun 6 01:28:55 2012 -0400

    Check if the system window has a close handler, and if yes, call it.

    This allows the close event in the preview window to be handled in a
    custom fashion, instead of having it call the normal "close window"
    command.

to show up

Change-Id: I5c46fb7a49ae44fd748b5b7192aeb951c7d65191
(cherry picked from commit 903e60753f4cf8fb03e27ed312a699f72ac1649a)
Reviewed-on: https://gerrit.libreoffice.org/27078
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Eike Rathke <erack@redhat.com>